JAVA-2523: Remove use of constructors and methods deprecated in Java 9: